# pytest.proj

./: .gitattributes  .gitignore  Dockerfile  README.md  conftest.py  pyproject.toml
.github/workflows/: workflow-docker-pages.yml
config/: settings.py
framework/api/: auth_api.py
framework/constants/: login.py  shop.py
framework/core/: app.py
framework/data/: users.py
framework/enums/: locators.py  top_panel.py
framework/enums/pages/: pages.py  top_panel.py
framework/enums/shop/: categories.py  goods.py  payment_methods.py  payment_status.py  user_currency.py
framework/flows/: app_flows.py
framework/flows/shop_flows/: cart_flow.py  checkout_flow.py  order_flow.py  purchase_flow.py
framework/models/: user.py
framework/models/api/responses/: login_response.py  user_response.py
framework/models/ui/: purchase_item.py
framework/pages/: app.py  app_pages.py
framework/pages/base/: base_component_page.py  base_page.py
framework/pages/shop_pages/: cart_page.py  login_page.py  my_orders_page.py  products_page.py  top_bar_panel.py
framework/pages/shop_pages/components/: cart_item.py  order_item.py  product_item.py  view_order_page.py
framework/utils/: regex.py
framework/utils/data_generation/: products_gen.py  user_gen.py
framework/utils/session/: session.py
framework/utils/user/: money.py
framework/utils/user_session/: request.py
scripts/: test-qa.sh
scripts/helpers/: browser.sh  pytest.sh
src/proj/qa-sandbox/: README.md  docker-compose.yml
tests/ui/: _test_google.py  login_test.py  purchase_test.py  test_google.py
(+19 files in other folders)
