[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest.proj"
version = "1.0.0"
requires-python = ">=3.14.5"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-playwright",
]

[tool.hatch.build.targets.wheel]
packages = ["src/proj"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "e2e: end-to-end tests",
    "unit: unit tests",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"