[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest.proj"
version = "1.0.0"
requires-python = ">=3.11"

dependencies = [
    "pytest>=8.4.0",
    "playwright>=1.54.0",    
    "pytest-playwright>=0.7.0",
    "pytest-html>=4.1.1",
    "python-dotenv>=1.1.0"
]

[project.optional-dependencies]
dev = [
    ""
]

[tool.hatch.build.targets.wheel]
packages = ["src/proj"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "e2e: end-to-end tests",
    "unit: unit tests",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"